FavoriteController.favorite を OpenAPI Generator で生成したソースコードに移行 (#310)
* test: OpenAPI Generator から生成したコードで FavoriteController を実装する場合、破壊的変更が発生するため、FavoriteControllerTest を削除

* feat: OpenAPI Generator から生成した、post /articles/{slug}/favorite の正常系を実装。author レスポンスの中身は、一時的に dummy に置き換え

* test: 「正常系-お気に入り登録済の作成済記事の slug を指定した場合も、favorited=trueの作成済記事が戻り値」テストを実装

* feat: OpenAPI Generator で生成したしたソースコードから、post /articles/{slug}/favorite の準正常系「slug が不正だったとき」を追加

* feat: OpenAPI Generator で生成したしたソースコードから、post /articles/{slug}/favorite の準正常系「slug に該当する作成済がなかったとき」を追加

* refactor: Slug のバリデーションをネストの外に移動させることで、可読性を向上

* test: ログインセッションのため、事前条件のデータにユーザーのデータを挿入

* refactor: author の取得処理を追加するため、articleRepository.favorite の実行をネストから除外

* feat: FavoriteUseCase.execute で戻り値が CreatedArticleWithAuthor を取得するように修正

* refactor: OpenAPI Generator により、slug に null が入らなくなったので、FavoriteUseCase.execute の引数 slug を String? から String に変更
