# e2e/openapi.yml
@@ -782,6 +782,13 @@ paths:
       description: Favorite an article. Auth is required
       operationId: CreateArticleFavorite
       parameters:
+        # 自前追加
+        - name: Authorization
+          in: header
+          description: セッション用JWT
+          required: true
+          schema:
+            $ref: '#/components/securitySchemes/Token'
         - name: slug
           in: path
           description: Slug of the article that you want to favorite
